--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "blogwebsite": "nodemon server.js",
+    "start": "nodemon server.js",
     "build" : "npm run blogwebsite"
 
   },
